--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -18,23 +18,167 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fsx-6Y-MBF">
-                                <rect key="frame" x="135" y="78" width="104" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Facebook login"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iphone-with-thumb" translatesAutoresizingMaskIntoConstraints="NO" id="3fE-wD-u4d">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NTE-Yh-dan">
+                                <rect key="frame" x="57.333333333333343" y="149.66666666666663" width="300" height="437"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UhR-g5-Hvo">
+                                        <rect key="frame" x="49.666666666666657" y="124.00000000000003" width="200" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" secureTextEntry="YES"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wWl-yo-rKf">
+                                        <rect key="frame" x="34.666666666666657" y="315" width="229.99999999999997" height="30"/>
+                                        <state key="normal" title="No account yet ? Create one here"/>
+                                        <connections>
+                                            <action selector="createAnAccountButtonWasTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="x1w-W6-dQF"/>
+                                        </connections>
+                                    </button>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vfz-rA-pwh">
+                                        <rect key="frame" x="49.666666666666657" y="47" width="200" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="200" id="B5V-np-zyx"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next"/>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="0.95954134980988592" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="wWl-yo-rKf" firstAttribute="centerX" secondItem="NTE-Yh-dan" secondAttribute="centerX" id="5B8-Y5-Vmh"/>
+                                    <constraint firstItem="UhR-g5-Hvo" firstAttribute="width" secondItem="Vfz-rA-pwh" secondAttribute="width" id="PnX-ZM-Nud"/>
+                                    <constraint firstItem="UhR-g5-Hvo" firstAttribute="top" secondItem="Vfz-rA-pwh" secondAttribute="bottom" constant="47" id="RCM-2a-F9c"/>
+                                    <constraint firstItem="UhR-g5-Hvo" firstAttribute="centerX" secondItem="NTE-Yh-dan" secondAttribute="centerX" id="UDK-gv-oxS"/>
+                                    <constraint firstItem="Vfz-rA-pwh" firstAttribute="centerX" secondItem="NTE-Yh-dan" secondAttribute="centerX" id="bOb-04-ap1"/>
+                                    <constraint firstItem="Vfz-rA-pwh" firstAttribute="top" secondItem="NTE-Yh-dan" secondAttribute="top" constant="47" id="iIN-Ll-uMG"/>
+                                    <constraint firstAttribute="height" constant="437" id="mzq-b5-E5i"/>
+                                    <constraint firstAttribute="width" constant="300" id="sUR-u7-4dI"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="erh-gP-jw3">
+                                <rect key="frame" x="107" y="335" width="200" height="30"/>
+                                <state key="normal" title="Log in"/>
+                                <connections>
+                                    <action selector="logInWasTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vRs-54-ZNi"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fsx-6Y-MBF">
+                                <rect key="frame" x="107" y="393" width="200" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="0.23588876626897459" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <state key="normal" title="Facebook login">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="facebookLogin:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mPK-qk-4UW"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="erh-gP-jw3" firstAttribute="top" secondItem="UhR-g5-Hvo" secondAttribute="bottom" constant="31.5" id="8am-LC-vVF"/>
+                            <constraint firstItem="Fsx-6Y-MBF" firstAttribute="top" secondItem="erh-gP-jw3" secondAttribute="bottom" constant="28" id="IUh-I6-eaa"/>
+                            <constraint firstItem="erh-gP-jw3" firstAttribute="centerX" secondItem="NTE-Yh-dan" secondAttribute="centerX" id="JhV-dF-jU8"/>
+                            <constraint firstItem="wWl-yo-rKf" firstAttribute="top" secondItem="Fsx-6Y-MBF" secondAttribute="bottom" constant="41.5" id="U2O-2q-cSZ"/>
+                            <constraint firstItem="NTE-Yh-dan" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YFi-Tk-1b8"/>
+                            <constraint firstItem="erh-gP-jw3" firstAttribute="width" secondItem="UhR-g5-Hvo" secondAttribute="width" id="ivD-Lm-htg"/>
+                            <constraint firstItem="Fsx-6Y-MBF" firstAttribute="centerX" secondItem="NTE-Yh-dan" secondAttribute="centerX" id="kBr-7d-6Qh"/>
+                            <constraint firstAttribute="trailing" secondItem="3fE-wD-u4d" secondAttribute="trailing" id="ox7-SG-MqP"/>
+                            <constraint firstItem="Fsx-6Y-MBF" firstAttribute="width" secondItem="erh-gP-jw3" secondAttribute="width" id="q5c-hH-Kqw"/>
+                            <constraint firstItem="3fE-wD-u4d" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="tlb-mK-CMK"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="3fE-wD-u4d" secondAttribute="bottom" id="veG-NN-NF9"/>
+                            <constraint firstItem="3fE-wD-u4d" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="vtN-QF-TCY"/>
+                            <constraint firstItem="NTE-Yh-dan" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ycm-GD-kHd"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="passwordTextField" destination="UhR-g5-Hvo" id="m2C-0E-r7L"/>
+                        <outlet property="usernameTextField" destination="Vfz-rA-pwh" id="phG-ew-WNG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="177.5390625" y="91.800878477306"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="blB-8R-HUV">
+            <objects>
+                <viewController id="fXW-eg-PdD" customClass="MapViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Vcl-mf-7Dh"/>
+                        <viewControllerLayoutGuide type="bottom" id="gIw-bh-Pfs"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="QQh-us-7Tb">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="h7T-7h-iyh">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="IoO-k2-Ddb"/>
+                    <connections>
+                        <outlet property="mapView" destination="h7T-7h-iyh" id="Fcz-cX-Rwr"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="j4C-mt-YD9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1887" y="-161"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="acc-0T-CFx">
+            <objects>
+                <viewController id="fKY-ke-Tuf" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="I2x-Qc-jh4"/>
+                        <viewControllerLayoutGuide type="bottom" id="scF-lk-k8W"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Q1O-sq-iRh">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="jlX-jn-pwe"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4db-Kf-rke" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1887" y="680"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="MI1-9K-xsf">
+            <objects>
+                <tabBarController storyboardIdentifier="MainTabBarController" automaticallyAdjustsScrollViewInsets="NO" id="JL0-Fr-8hl" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="TuY-7E-hur">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="fXW-eg-PdD" kind="relationship" relationship="viewControllers" id="Agb-h5-rhc"/>
+                        <segue destination="fKY-ke-Tuf" kind="relationship" relationship="viewControllers" id="FTD-sU-tso"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dxm-vt-SQS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1026.0869565217392" y="92.119565217391312"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="iphone-with-thumb" width="1920" height="1279"/>
+    </resources>
 </document>
