--- a/OnTheMap/Base.lproj/StudentAnnotationView.xib
+++ b/OnTheMap/Base.lproj/StudentAnnotationView.xib
@@ -12,38 +12,46 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="StudentAnnotationView" customModule="OnTheMap" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+            <rect key="frame" x="0.0" y="0.0" width="210" height="114"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="student" translatesAutoresizingMaskIntoConstraints="NO" id="Ecy-JD-nKH">
-                    <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+                    <rect key="frame" x="95" y="94" width="20" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="EEM-sa-t9y"/>
                         <constraint firstAttribute="width" constant="20" id="nkh-mf-816"/>
                     </constraints>
                 </imageView>
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cuk-iS-vWn">
-                    <rect key="frame" x="-75" y="-60" width="170" height="60"/>
+                    <rect key="frame" x="20" y="35" width="170" height="54"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xlf-Xh-LpH">
-                            <rect key="frame" x="8" y="8" width="58" height="21"/>
+                            <rect key="frame" x="31" y="8" width="128" height="21"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="10"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Url" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h7R-1d-7mK">
-                            <rect key="frame" x="8" y="31" width="42" height="21"/>
+                            <rect key="frame" x="31" y="31" width="128" height="21"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="9"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="gJi-Ue-7eS" userLabel="profile image">
+                            <rect key="frame" x="8" y="11" width="15" height="15"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </imageView>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="www" translatesAutoresizingMaskIntoConstraints="NO" id="vJa-wS-of2" userLabel="www image">
+                            <rect key="frame" x="8" y="34" width="15" height="15"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </imageView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="170" id="AEN-5y-TUd"/>
-                        <constraint firstAttribute="height" constant="60" id="S4m-c5-0EP"/>
+                        <constraint firstAttribute="height" constant="54" id="S4m-c5-0EP"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -56,7 +64,7 @@
                 <constraint firstItem="Ecy-JD-nKH" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="8XS-H4-Blt"/>
                 <constraint firstItem="cuk-iS-vWn" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="8qk-PX-Vl2"/>
                 <constraint firstItem="Ecy-JD-nKH" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="HgY-Yb-ZWy"/>
-                <constraint firstItem="Ecy-JD-nKH" firstAttribute="top" secondItem="cuk-iS-vWn" secondAttribute="bottom" id="qYr-e8-0eI"/>
+                <constraint firstItem="Ecy-JD-nKH" firstAttribute="top" secondItem="cuk-iS-vWn" secondAttribute="bottom" constant="5" id="qYr-e8-0eI"/>
                 <constraint firstAttribute="bottom" secondItem="Ecy-JD-nKH" secondAttribute="bottom" id="sqq-nr-35h"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
@@ -64,13 +72,17 @@
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="calloutView" destination="cuk-iS-vWn" id="sss-P6-oA4"/>
+                <outlet property="calloutView" destination="cuk-iS-vWn" id="NDy-On-Y3W"/>
+                <outlet property="nameLabel" destination="Xlf-Xh-LpH" id="Ihf-jb-20Q"/>
                 <outlet property="studentImageView" destination="Ecy-JD-nKH" id="heq-IJ-OZG"/>
+                <outlet property="urlLabel" destination="h7R-1d-7mK" id="doQ-gK-dn6"/>
             </connections>
-            <point key="canvasLocation" x="172" y="143.5"/>
+            <point key="canvasLocation" x="117" y="-124"/>
         </view>
     </objects>
     <resources>
+        <image name="profile" width="30" height="30"/>
         <image name="student" width="20" height="20"/>
+        <image name="www" width="30" height="30"/>
     </resources>
 </document>
